[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["command-line-utilities"]
description = "A terminal feed reader with a fancy ui"
documentation = "https://docs.rs/tuifeed"
edition = "2021"
homepage = "https://veeso.github.io/tuifeed/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["rss", "feed", "feed-reader", "command-line-utility"]
license = "MIT"
name = "tuifeed"
readme = "README.md"
repository = "https://github.com/veeso/tuifeed"
version = "0.3.1"

[[bin]]
name = "tuifeed"
path = "src/main.rs"

[dependencies]
argh = "0.1.8"
chrono = "^0.4.22"
dirs = "4.0.0"
feed-rs = "^1.1.0"
lazy-regex = "2.3.0"
lazy_static = "1.4.0"
open = "3.0.2"
serde = { version = "^1.0.0", features = [ "derive" ] }
thiserror = "^1.0.0"
toml = "0.5.9"
tuirealm = "=1.7.0"
tui-realm-stdlib = "^1.1.7"
tui-realm-textarea = "^1.1.0"
unicode-truncate = "^0.2.0"
ureq = { version = "2.5.0", features = [ "tls" ] }

[dev-dependencies]
pretty_assertions = "^1.2.1"
serial_test = "^0.9.0"
tempfile = "^3.3.0"
