[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["command-line-utilities"]
description = "A terminal feed reader with a fancy ui"
documentation = "https://docs.rs/tuifeed"
edition = "2024"
homepage = "https://veeso.github.io/tuifeed/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["rss", "feed", "feed-reader", "command-line-utility"]
license = "MIT"
name = "tuifeed"
readme = "README.md"
repository = "https://github.com/veeso/tuifeed"
version = "0.4.0"

[[bin]]
name = "tuifeed"
path = "src/main.rs"

[dependencies]
argh = "0.1"
chrono = "^0.4"
dirs = "6"
feed-rs = "2"
lazy-regex = "3"
lazy_static = "1.5"
open = "5"
serde = { version = "^1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
tuirealm = "2"
tui-realm-stdlib = "2"
tui-realm-textarea = "2.1"
unicode-truncate = "^2"
ureq = { version = "3", features = ["rustls"] }

[dev-dependencies]
pretty_assertions = "^1"
serial_test = "3"
tempfile = "3"
