[package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["command-line-utilities"]
description = "A terminal feed reader with a fancy ui"
documentation = "https://docs.rs/tuifeed"
edition = "2024"
homepage = "https://github.com/veeso/tuifeed"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["rss", "feed", "feed-reader", "command-line-utility"]
license = "MIT"
name = "tuifeed"
readme = "README.md"
repository = "https://github.com/veeso/tuifeed"
version = "0.4.1"

[[bin]]
name = "tuifeed"
path = "src/main.rs"

[dependencies]
argh = "0.1"
chrono = "^0.4"
dirs = "6"
feed-rs = "2"
lazy-regex = "3"
lazy_static = "1.5"
open = "5"
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tuirealm = "2"
tui-realm-stdlib = "2"
tui-realm-textarea = "2.1"
unicode-truncate = "^2"
ureq = { version = "3", features = ["rustls"] }

[dev-dependencies]
pretty_assertions = "^1"
serial_test = "3"
tempfile = "3"
